Mobile nav menu no longer shifts content. (#35)
* mobile nav menu no longer shifts content.

* removed style setting code that was no longer needed

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -39,6 +39,13 @@
   --color-light-blue: rgb(54 90 139);
 }
 
+/* disabling scroll on html in favor of 
+having it on the body, so scrolling can be blocked
+by the mobile nav menu. */
+html {
+  overflow: hidden;
+}
+
 html, body {
   width: 100%;
   height: 100%;
@@ -48,6 +55,7 @@ body {
   margin: 0;
   font-family: var(--font-family);
   overflow-x: hidden;
+  overflow-y: auto;
   box-sizing: border-box;
   display: none;
 }
